--- a/README.Rmd
+++ b/README.Rmd
@@ -13,18 +13,21 @@ knitr::opts_chunk$set(
 
 # tidytuesday
 
+## 2019-03-04-23 🎎
+
+<img src="plots/plot_2019-04-23.png" align="center"/>
 
 ## 2019-04-09 🎾 
-
 
 <center>
 <img src="plots/plot_2019-04-09.gif" align="center"/>
 </center>
-## 2019-03-4-02 🚴🏻
+
+## 2019-04-02 🚴🏻
 
 <img src="plots/plot_2019-04-02.png" align="center"/>
 
-## 2019-026 🐕🐈
+## 2019-03-26 🐕🐈
 
 <img src="plots/plot_2019-03-26.png" align="center"/>
 
