--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# tidytuesday
+
+<img src="tt_logo.png" align="center"/>
+
+
+## 2019-04-30 🐦
+
+<img src="plots/plot_2019-04-30.png" align="center"/>
 
 ## 2019-04-23 🎎
 
