--- a/README.Rmd
+++ b/README.Rmd
@@ -12,31 +12,34 @@ knitr::opts_chunk$set(
 ```
 
 
-<img src="tt_logo.png" align="center"/>
+# tidytuesday <a href='https://github.com/rfordatascience/tidytuesday' target='_blank'><img src='tt_hex.png' align="right" height="139" /></a>
 
+## 2019-05-07 `r emo::ji("man_teacher_light_skin_tone")``r emo::ji("school")`
 
-## 2019-04-30 🐦
+<img src="plots/plot_2019-05-07.png" align="center"/>
+
+## 2019-04-30 `r emo::ji("bird")`
 
 <img src="plots/plot_2019-04-30.png" align="center"/>
 
-## 2019-04-23 🎎
+## 2019-04-23 `r emo::ji("dolls")`
 
 <img src="plots/plot_2019-04-23.png" align="center"/>
 
-## 2019-04-09 🎾 
+## 2019-04-09 `r emo::ji("tennis")`
 
 <center>
 <img src="plots/plot_2019-04-09.gif" align="center"/>
 </center>
 
-## 2019-04-02 🚴🏻
+## 2019-04-02 `r emo::ji("biking_man")`
 
 <img src="plots/plot_2019-04-02.png" align="center"/>
 
-## 2019-03-26 🐕🐈
+## 2019-03-26 `r emo::ji("dog2")``r emo::ji("cat2")`
 
 <img src="plots/plot_2019-03-26.png" align="center"/>
 
-## 2019-03-19 🚓
+## 2019-03-19 `r emo::ji("police_car")`
 
 <img src="plots/plot_2019-03-19.png" align="center"/>
