--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(
 
 # tidytuesday <a href='https://github.com/rfordatascience/tidytuesday' target='_blank'><img src='tt_hex.png' align="right" height="139" /></a>
 
+## 2019-05-14 `r emo::ji("woman_scientist_light_skin_tone")``r emo::ji("trophy")`
+
+<img src="plots/plot_2019-05-14.png" align="center"/>
+
 ## 2019-05-07 `r emo::ji("man_teacher_light_skin_tone")``r emo::ji("school")`
 
 <img src="plots/plot_2019-05-07.png" align="center"/>
