--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ knitr::opts_chunk$set(
 
 
 
+## 2019-05-28 `r emo::ji("wine_glass")`
+
+<img src="plots/plot_2019-05-28.png" align="center"/>
+
 ## 2019-05-21 `r emo::ji("put_litter_in_its_place")`
 
 <img src="plots/plot_2019-05-21.png" align="center"/>
@@ -52,4 +56,4 @@ knitr::opts_chunk$set(
 
 ## 2019-03-19 `r emo::ji("police_car")`
 
-<img src="plots/plot_2019-03-19.png" align="center"/>
+<a href='abichat/tidytuesday/blob/master/scripts/script_2019-03-19.R' target='_blank'><img src="plots/plot_2019-03-19.png" align="center"/></a>
