--- a/README.Rmd
+++ b/README.Rmd
@@ -18,42 +18,42 @@ knitr::opts_chunk$set(
 
 ## 2019-05-28 `r emo::ji("wine_glass")`
 
-<img src="plots/plot_2019-05-28.png" align="center"/>
+<a href='scripts/script_2019-05-28.R' target='_blank'><img src="plots/plot_2019-05-28.png" align="center"/></a>
 
 ## 2019-05-21 `r emo::ji("put_litter_in_its_place")`
 
-<img src="plots/plot_2019-05-21.png" align="center"/>
+<a href='scripts/script_2019-05-21.R' target='_blank'><img src="plots/plot_2019-05-21.png" align="center"/></a>
 
 ## 2019-05-14 `r emo::ji("woman_scientist_light_skin_tone")``r emo::ji("trophy")`
 
-<img src="plots/plot_2019-05-14.png" align="center"/>
+<a href='scripts/script_2019-05-14.R' target='_blank'><img src="plots/plot_2019-05-14.png" align="center"/></a>
 
 ## 2019-05-07 `r emo::ji("man_teacher_light_skin_tone")``r emo::ji("school")`
 
-<img src="plots/plot_2019-05-07.png" align="center"/>
+<a href='scripts/script_2019-05-07.R' target='_blank'><img src="plots/plot_2019-05-07.png" align="center"/></a>
 
 ## 2019-04-30 `r emo::ji("bird")`
 
-<img src="plots/plot_2019-04-30.png" align="center"/>
+<a href='scripts/script_2019-04-30.R' target='_blank'><img src="plots/plot_2019-04-30.png" align="center"/></a>
 
 ## 2019-04-23 `r emo::ji("dolls")`
 
-<img src="plots/plot_2019-04-23.png" align="center"/>
+<a href='scripts/script_2019-04-23.R' target='_blank'><img src="plots/plot_2019-04-23.png" align="center"/></a>
 
 ## 2019-04-09 `r emo::ji("tennis")`
 
 <center>
-<img src="plots/plot_2019-04-09.gif" align="center"/>
+<a href='scripts/script_2019-04-09.R' target='_blank'><img src="plots/plot_2019-04-09.gif" align="center"/></a>
 </center>
 
 ## 2019-04-02 `r emo::ji("biking_man")`
 
-<img src="plots/plot_2019-04-02.png" align="center"/>
+<a href='scripts/script_2019-04-02.R' target='_blank'><img src="plots/plot_2019-04-02.png" align="center"/></a>
 
 ## 2019-03-26 `r emo::ji("dog2")``r emo::ji("cat2")`
 
-<img src="plots/plot_2019-03-26.png" align="center"/>
+<a href='scripts/script_2019-03-26.R' target='_blank'><img src="plots/plot_2019-03-26.png" align="center"/></a>
 
 ## 2019-03-19 `r emo::ji("police_car")`
 
-<a href='abichat/tidytuesday/blob/master/scripts/script_2019-03-19.R' target='_blank'><img src="plots/plot_2019-03-19.png" align="center"/></a>
+<a href='scripts/script_2019-03-19.R' target='_blank'><img src="plots/plot_2019-03-19.png" align="center"/></a>
