--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ knitr::opts_chunk$set(
 
 
 
+## 2019-06-25 `r emo::ji("alien")` `r emo::ji("flying_saucer")` 
+
+<a href='scripts/script_2019-06-25.R' target='_blank'><img src="plots/plot_2019-06-25.gif" align="center"/></a>
+
 ## 2019-06-18 `r emo::ji("swan")` `r emo::ji("duck")` `r emo::ji("bird")`
 
 <a href='scripts/script_2019-06-18.R' target='_blank'><img src="plots/plot_2019-06-18.png" align="center"/></a>
