--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,11 @@ knitr::opts_chunk$set(
 
 
 
-## 2019-06-25 `r emo::ji("alien")` `r emo::ji("flying_saucer")` 
+## 2019-06-25 `r emo::ji("movie_camera")``r emo::ji("moneybag")` 
+
+<a href='scripts/script_2019-07-02.R' target='_blank'><img src="plots/plot_2019-07-02.png" align="center"/></a>
+
+## 2019-06-25 `r emo::ji("alien")``r emo::ji("flying_saucer")` 
 
 <a href='scripts/script_2019-06-25.R' target='_blank'><img src="plots/plot_2019-06-25.gif" align="center"/></a>
 
