--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ knitr::opts_chunk$set(
 
 
 
+## 2019-08-20 `r emo::ji("bomb")` `r emo::ji("radioactive")`
+
+<a href='scripts/script_2019-08-20.R' target='_blank'><img src="plots/plot_2019-08-20.png" align="center"/></a>
+
 ## 2019-07-23 `r emo::ji("airplane")` `r emo::ji("bird")`
 
 <a href='scripts/script_2019-07-23.R' target='_blank'><img src="plots/plot_2019-07-23.png" align="center"/></a>
