2019-11-12 :1234: :abcd: :capital_abcd:

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,9 @@ knitr::opts_chunk$set(
 # tidytuesday <a href='https://github.com/rfordatascience/tidytuesday' target='_blank'><img src='tt_hex.png' align="right" height="139" /></a>
 
 
+## 2019-11-22 `r emo::ji("1234")` `r emo::ji("abcd")` `r emo::ji("capital_abcd")`
+
+<a href='scripts/script_2019-11-12.R' target='_blank'><img src="plots/plot_2019-11-12.png" align="center"/></a>
 
 ## 2019-09-24 `r emo::ji("child_light_skin_tone")` `r emo::ji("child_medium_skin_tone")` `r emo::ji("child_dark_skin_tone")`
 
