--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,10 @@ knitr::opts_chunk$set(
 # tidytuesday <a href='https://github.com/rfordatascience/tidytuesday' target='_blank'><img src='tt_hex.png' align="right" height="139" /></a>
 
 
+## 2020-02-18 `r emo::ji("fork_and_knife_with_plate")`
+
+<a href='scripts/script_2020-02-18.R' target='_blank'><img src="plots/plot_2020-02-18.gif" align="center"/></a>
+
 ## 2019-12-17 `r emo::ji("dog_face")``r emo::ji("us")` 
 
 <a href='scripts/script_2019-12-17.R' target='_blank'><img src="plots/plot_2019-12-17.png" align="center"/></a>
