--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,10 @@ knitr::opts_chunk$set(
 # tidytuesday <a href='https://github.com/rfordatascience/tidytuesday' target='_blank'><img src='tt_hex.png' align="right" height="139" /></a>
 
 
+## 2020-05-12 `r emo::ji("volcano")`
+
+<a href='scripts/script_2020-05-12.R' target='_blank'><img src="plots/plot_2020-05-12.png" align="center"/></a>
+
 ## 2020-05-05 `r emo::ji("hammer")``r emo::ji("leaves")`
 
 <a href='scripts/script_2020-05-05.R' target='_blank'><img src="plots/plot_2020-05-05.png" align="center"/></a>
